# VaulTLS

./: Containerfile  README.md
.github/: dependabot.yml
.github/workflows/: docker-image-dev.yml  docker-image.yml  push-latest.yaml
backend/: Cargo.toml
backend/migrations/: 02-pkcspassword.sql
backend/migrations/01-initial/: up.sql
backend/migrations/02-pkcspassword/: up.sql
backend/migrations/03-servercertificate/: up.sql
backend/src/: auth.rs  cert.rs  constants.rs  db.rs  helper.rs  local_auth.rs  main.rs  notification.rs  oidc_auth.rs  settings.rs
backend/src/auth/: mod.rs  oidc_auth.rs  password_auth.rs  session_auth.rs
backend/src/data/: api.rs  enums.rs  error.rs  mod.rs
container/: nginx.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: ApiClient.ts  auth.ts  certificates.ts  settings.ts  users.ts
frontend/src/assets/styles/: variables.css
frontend/src/components/: GenerateTab.vue  OverviewTab.vue  ProfileCard.vue  SettingsTab.vue  Sidebar.vue  UserTab.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: router.ts
frontend/src/stores/: auth.ts  certificates.ts  settings.ts  users.ts
frontend/src/types/: Certificate.ts  CertificateRequirements.ts  Login.ts  Settings.ts  User.ts
frontend/src/views/: FirstSetupView.vue  LoginView.vue
